--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="./favicon.ico" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>黄小明的home</title>
-<script type="module" src="/_assets/index.d7ed1169.js"></script>
-<link rel="stylesheet" href="/_assets/style.77d45888.css">
+<script type="module" src="./_assets/index.d7ed1169.js"></script>
+<link rel="stylesheet" href="./_assets/style.77d45888.css">
 </head>
 
 <body>
