--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
   <title>黄小明产品经理</title>
-<script type="module" src="./_assets/index.d6e4b6d8.js"></script>
-<link rel="stylesheet" href="./_assets/style.77d45888.css">
+  <script type="module" src="./index.d6e4b6d8.js"></script>
+  <link rel="stylesheet" href="./style.77d45888.css">
 </head>
 
 <body>
   <div id="app"></div>
-  
+
 </body>
 
 </html>
